# SyclParallelSTL

./: .travis.yml  CMakeLists.txt  Contributors.md  Dockerfile  LICENSE.txt  README.md  build.sh
.travis/: additional_undef  before_install.sh  build_computecpp.sh  build_triSYCL.sh  computecpp_workaround.sh  install_intel_opencl.sh
ComputeCpp ParallelSTL VS2015/: ComputeCpp ParallelSTL VS2015.sln
ComputeCpp ParallelSTL VS2015/SYCL Sample 0/: SYCL Sample 0.vcxproj  SYCL Sample 0.vcxproj.filters
ComputeCpp ParallelSTL VS2015/SYCL Sample 1/: SYCL Sample 1.vcxproj  SYCL Sample 1.vcxproj.filters
ComputeCpp ParallelSTL VS2015/parallel execpol/: parallel execpol.vcxproj  parallel execpol.vcxproj.filters
ComputeCpp ParallelSTL VS2015/test - buffer_unique_ptr/: test - buffer_unique_ptr.vcxproj  test - buffer_unique_ptr.vcxproj.filters
ComputeCpp ParallelSTL VS2015/test - count_if/: test - count_if.vcxproj  test - count_if.vcxproj.filters
ComputeCpp ParallelSTL VS2015/test - exclusive_scan/: test - exclusive_scan.vcxproj  test - exclusive_scan.vcxproj.filters
ComputeCpp ParallelSTL VS2015/test - fill/: test - fill.vcxproj  test - fill.vcxproj.filters
ComputeCpp ParallelSTL VS2015/test - for_each/: test - for_each.vcxproj  test - for_each.vcxproj.filters
ComputeCpp ParallelSTL VS2015/test - for_each_n/: test - for_each_n.vcxproj  test - for_each_n.vcxproj.filters
ComputeCpp ParallelSTL VS2015/test - inclusive_scan/: test - inclusive_scan.vcxproj  test - inclusive_scan.vcxproj.filters
ComputeCpp ParallelSTL VS2015/test - invalid_vector_iterators/: test - invalid_vector_iterators.vcxproj  test - invalid_vector_iterators.vcxproj.filters
ComputeCpp ParallelSTL VS2015/test - reduce/: test - reduce.vcxproj  test - reduce.vcxproj.filters
ComputeCpp ParallelSTL VS2015/test - sort/: test - sort.vcxproj  test - sort.vcxproj.filters
ComputeCpp ParallelSTL VS2015/test - transform/: test - transform.vcxproj  test - transform.vcxproj.filters
ComputeCpp ParallelSTL VS2015/test - transform_reduce/: test - transform_reduce.vcxproj  test - transform_reduce.vcxproj.filters
ComputeCpp ParallelSTL VS2015/test - vector/: test - vector.vcxproj  test - vector.vcxproj.filters
ComputeCpp ParallelSTL VS2015/test -inner_product/: test -inner_product.vcxproj  test -inner_product.vcxproj.filters
benchmarks/: CMakeLists.txt  amd_cpu_selector.hpp  basic.cpp  benchmark.h  cli_device_selector.hpp  intel_cpu_selector.hpp  montecarloPI.cpp  nbody.cpp  std_foreach_saxpy.cpp  std_sort.cpp  std_transform_saxpy.cpp  sycl_accumulate.cpp  sycl_exclusive_scan.cpp  sycl_foreach_saxpy.cpp  sycl_inclusive_scan.cpp  sycl_reduce.cpp  sycl_sort.cpp  sycl_transform_het_saxpy.cpp  sycl_transform_reduce_saxpy.cpp  sycl_transform_saxpy.cpp  word_count.cpp
cmake/Modules/: FindComputeCpp.cmake  FindTriSYCL.cmake
examples/: CMakeLists.txt  parallel.execpol.general.cpp  parallel_execpol_general.cpp  sycl_example_02.cpp  sycl_sample_00.cpp  sycl_sample_01.cpp
include/experimental/: algorithm  execution_policy  sycl_vector
include/experimental/detail/: sycl_buffers.hpp  sycl_iterator
include/experimental/detail/algorithm/: for_each.hpp  transform.hpp
include/experimental/detail/algorithm/sort/: sort.hpp
include/sycl/: execution_policy  heterogeneous_execution_policy.hpp
include/sycl/algorithm/: algorithm_composite_patterns.hpp  buffer_algorithms.hpp  count_if.hpp  equal.hpp  exclusive_scan.hpp  fill.hpp  find.hpp  for_each.hpp  for_each_n.hpp  generate.hpp  generate_n.hpp  inclusive_scan.hpp  inner_product.hpp  mismatch.hpp  reduce.hpp  replace_copy_if.hpp  replace_if.hpp  reverse.hpp  reverse_copy.hpp  rotate_copy.hpp  sort.hpp  transform.hpp  transform_reduce.hpp
include/sycl/helpers/: sycl_buffers.hpp  sycl_differences.hpp  sycl_iterator.hpp  sycl_namegen.hpp  sycl_swap.hpp
src/: CMakeLists.txt  policies.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in  all_of.cpp  any_of.cpp  buffer_iterator.cpp  buffer_unique_ptr.cpp  count.cpp  count_if.cpp  equal.cpp  exclusive_scan.cpp  fill.cpp  fill_n.cpp  find.cpp  for_each.cpp  for_each_n.cpp  generate.cpp  generate_n.cpp  inclusive_scan.cpp  inner_product.cpp  invalid_vector_iterators.cpp  mismatch.cpp  none_of.cpp  reduce.cpp  replace.cpp  replace_copy.cpp  replace_copy_if.cpp  replace_if.cpp  reverse.cpp  reverse_copy.cpp  sort.cpp  transform.cpp  transform_reduce.cpp  vector.cpp
tests/pstl-tests/: CMakeLists.txt  all_of.cpp  any_of.cpp  buffer_unique_ptr.cpp  count.cpp  count_if.cpp  equal.cpp  exclusive_scan.cpp  fill.cpp  fill_n.cpp  find.cpp  for_each.cpp  for_each_n.cpp  generate.cpp  generate_n.cpp  inclusive_scan.cpp  inner_product.cpp  invalid_vector_iterators.cpp  mismatch.cpp  none_of.cpp  reduce.cpp  replace.cpp  replace_copy.cpp  replace_copy_if.cpp  replace_if.cpp  reverse.cpp  reverse_copy.cpp  sort.cpp  transform.cpp  transform_reduce.cpp  vector.cpp
